--- a/assn04/case1/jtc_index.html
+++ b/assn04/case1/jtc_index.html
@@ -12,6 +12,10 @@
 
     Filename: jtc_index.html
    -->
+    <meta charset="utf=8" />
+    <title>Jedds Tree Care</title>
+    <link href="jtc_base.css" rel="stylesheet" />
+    <link href="jtc_layout.css" rel="stylesheet" />
 
 </head>
 
