--- a/assn04/case1/jtc_index.html
+++ b/assn04/case1/jtc_index.html
@@ -26,22 +26,23 @@
         
     </header>
     <aside>
-        I hired Jedds to remove an old Sugar maple from a narrow yard. 
+        <img src="jtc_comments.png" alt="Comments"/>
+        <blockquote><p>I hired Jedds to remove an old Sugar maple from a narrow yard. 
 They did the job with no damage to my garage and cleaned it all up 
-that same day. Great service.
---- Kevin S (Dewitt)
+that same day. Great service.</p>
+<cite>&mdash; Kevin S (Dewitt)</cite></blockquote>
 
 
-Jedds Tree Care promptly came to examine a downed tree and provide 
+<blockquote><p>Jedds Tree Care promptly came to examine a downed tree and provide 
 an estimate for its removal. They did the job fast and at the lowest bid. 
-I'll call them again without hesitation for future lawn and garden needs.
---- Ann K (Stockbridge)
+I'll call them again without hesitation for future lawn and garden needs.</p>
+<cite>&mdash; Ann K (Stockbridge)</cite></blockquote>
 
 
-Their team took down five trees in one day and did an immaculate clean-up. 
+<blockquote><p>Their team took down five trees in one day and did an immaculate clean-up. 
 They took extra care not to disturb my lawn and garden. I highly recommend 
-their service.
----  David P (Lansing)
+their service.</p>
+<cite>&mdash; David P (Lansing)</cite></blockquote>
     </aside>
     <article>
         
