--- a/assn04/case1/jtc_index.html
+++ b/assn04/case1/jtc_index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<!--
+  <head>
+    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 1
@@ -16,37 +16,47 @@
     <title>Jedds Tree Care</title>
     <link href="jtc_base.css" rel="stylesheet" />
     <link href="jtc_layout.css" rel="stylesheet" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        <a href="jtc_index.html">home</a>
-        <a href="jtc_services.html">services</a>
-        
+      <a href="jtc_index.html">home</a>
+      <a href="jtc_services.html">services</a>
     </header>
     <aside>
-        <img src="jtc_comments.png" alt="Comments"/>
-        <blockquote><p>I hired Jedds to remove an old Sugar maple from a narrow yard. 
-They did the job with no damage to my garage and cleaned it all up 
-that same day. Great service.</p>
-<cite>&mdash; Kevin S (Dewitt)</cite></blockquote>
+      <img src="jtc_comments.png" alt="Comments" />
+      <blockquote>
+        <p>
+          I hired Jedds to remove an old Sugar maple from a narrow yard. They
+          did the job with no damage to my garage and cleaned it all up that
+          same day. Great service.
+        </p>
+        <cite>&mdash; Kevin S (Dewitt)</cite>
+      </blockquote>
 
+      <blockquote>
+        <p>
+          Jedds Tree Care promptly came to examine a downed tree and provide an
+          estimate for its removal. They did the job fast and at the lowest bid.
+          I'll call them again without hesitation for future lawn and garden
+          needs.
+        </p>
+        <cite>&mdash; Ann K (Stockbridge)</cite>
+      </blockquote>
 
-<blockquote><p>Jedds Tree Care promptly came to examine a downed tree and provide 
-an estimate for its removal. They did the job fast and at the lowest bid. 
-I'll call them again without hesitation for future lawn and garden needs.</p>
-<cite>&mdash; Ann K (Stockbridge)</cite></blockquote>
-
-
-<blockquote><p>Their team took down five trees in one day and did an immaculate clean-up. 
-They took extra care not to disturb my lawn and garden. I highly recommend 
-their service.</p>
-<cite>&mdash; David P (Lansing)</cite></blockquote>
+      <blockquote>
+        <p>
+          Their team took down five trees in one day and did an immaculate
+          clean-up. They took extra care not to disturb my lawn and garden. I
+          highly recommend their service.
+        </p>
+        <cite>&mdash; David P (Lansing)</cite>
+      </blockquote>
     </aside>
     <article>
-        
+        <header>
+            <img src="jtc_photo1.png" alt="Jedds Tree Care" /></header>
+        </header>
     </article>
-</body>
-
+  </body>
 </html>
