--- a/assn04/case1/jtc_index.html
+++ b/assn04/case1/jtc_index.html
@@ -57,21 +57,22 @@
         <header>
             <img src="jtc_photo1.png" alt="Jedds Tree Care" /></header>
         </header>
-        Jedds Tree Care is a complete yard service including branch trimming, pruning, 
+        <p>Jedds Tree Care is a complete yard service including branch trimming, pruning, 
 stump removal and emergency tree removal. We offer same day emergency service 24/7. 
 Jedds operates out of East Lansing, MI, but also serves the surrounding counties 
 for your urban and rural needs. We provide tree and yard care for both commercial 
-and residential clients. Customer satisfaction is our primary goal.
+and residential clients. Customer satisfaction is our primary goal.</p>
 
-Our business is fully insured. Safety is our number one priority. We have 
+<p>Our business is fully insured. Safety is our number one priority. We have 
 professional arborists on staff to deal with your special needs and we can 
-handle any job, large or small.
+handle any job, large or small.</p>
 
-Jedds Tree Care
-201 Edward Ave.
-Lansing, MI 48930 
-email:	jeddstree@example.com
-phone:	517.555.4811
+
+<address><strong>Jedds Tree Care</strong><br />
+201 Edward Ave.<br />
+Lansing, MI 48930 <br />
+<a href="mailto:jeddstree@example.com">email:	jeddstree@example.com</a><br />
+<a href="tel:+15175554811">phone:	517.555.4811</a></address><br />
     </article>
   </body>
 </html>
