--- a/assn04/case1/jtc_services.html
+++ b/assn04/case1/jtc_services.html
@@ -19,7 +19,14 @@
 </head>
 
 <body>
-
+    <header>
+        <nav>
+          <ul>
+            <li><a href="jtc_index.html">home</a></li>
+            <li><a href="jtc_services.html">services</a></li>
+          </ul>
+        </nav>
+      </header>
 </body>
 
 </html>
