--- a/assn04/case1/jtc_services.html
+++ b/assn04/case1/jtc_services.html
@@ -91,5 +91,8 @@
       other greenery to enhance the natural beauty of your property and help you
       achieve your landscaping vision.
     </p>
+    <footer>
+        Jedds Tree Care &#9830; 201 Edward Ave. &#9830; Lansing, MI 48930
+    </footer>
   </body>
 </html>
