--- a/assn05/tutorial/tss_bike.html
+++ b/assn05/tutorial/tss_bike.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     TSS Cycling Class
-    Author: 
-    Date:   
+    Author: Zulisa Rodriguez
+    Date:   10/27/2024
 
     Filename: tss_bike.html
    -->
