--- a/assn06/tutorial/pc_home.html
+++ b/assn06/tutorial/pc_home.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Home Page of Pandaisia Chocolates
-    Author: 
-    Date:   
+    Author: Zulisa Rodriguez
+    Date:   11/02/2024
 
     Filename: pc_home.html
    -->
