--- a/assn06/tutorial/pc_about.html
+++ b/assn06/tutorial/pc_about.html
@@ -7,8 +7,8 @@
         Tutorial Case
         
         About Pandaisia Chocolates Page
-        Author: 
-        Date:   
+        Author: Zulisa Rodriguez
+        Date:   11/02/2024
     
         Filename: pc_about.html
      -->
