--- a/assn06/tutorial/pc_info.html
+++ b/assn06/tutorial/pc_info.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Chocolate Infographic Page
-    Author: 
-    Date:  
+    Author: Zulisa Rodriguez
+    Date:  11/03/2024
 
     Filename: pc_info.html
    -->
