--- a/assn05/review/tss_coach.html
+++ b/assn05/review/tss_coach.html
@@ -7,13 +7,14 @@
     Review Assignment
     
     Tri and Succeed Sports
-    Author: 
-    Date:   
+    Author: Zulisa Rodriguez
+    Date:   11/03/2024
 
     Filename: tss_coach.html
    -->
    <meta charset="utf-8" />
    <title>Tri and Succeed Sports Coaches</title>
+   <link href=""
 
 </head>
 
