--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,50 +1,72 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My personal web page for class CSC230-Web Design</title>
+    <link href="index_styles.css" rel="stylesheet" />
+    <link href="index_layout.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Header Section-->
-    <header>
-        <h1>Zulisa Rodriguez</h1>
-        <h3>Bachelor in Information Technology</h3>
+    <div class="container">
+        
+        <!-- Header Section -->
+        <header class="header">
+            <h1>Zulisa Rodriguez</h1>
+            <p>Bachelor in Information Technology</p>
+            <p>Years until graduation: 2</p>
+            <p>Email: zcru3705@gmail.com</p>
+            <img src="Zulisa.jpg" alt="Profile Picture of Zulisa Rodriguez" style="width:150px; height:auto; border-radius:50%; border:3px solid #ff6b6b;" />
+        </header>
 
-    </header>
-        <p>Years until graduation: 2</p>
-        <p>Email: zcru3705@gmail.com</p>
-        <img src="Zulisa.jpg" alt="" style="width:300px; height:auto;" />
+        <!-- Navigation Bar -->
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#assignments">Assignments</a>
+            <a href="#useful-links">Useful Links</a>
+            <a href="#about">About</a>
+        </nav>
 
-    <!-- Navigation Section-->
-    <nav>
-        <h2>Assignments</h2>
-        <ul>
-            <li><a href="tutorial/ct_start.html">Curbside Thai</a></li> 
-            <li><a href="review/mp_index.html">Mobile Panini</a></li>
-        </ul>
-    </nav>
+        <!-- Main Content Grid -->
+        <div class="main-content">
+            
+            <!-- Assignments Section -->
+            <section class="section-box" id="assignments">
+                <h2>Assignments</h2>
+                <ul>
+                    <li><a href="tutorial/ct_start.html">Curbside Thai</a></li>
+                    <li><a href="review/mp_index.html">Mobile Panini</a></li>
+                    <li><a href="Case 1/jtc_index.html">Jedds Tree Care</a></li>
+                    <li><a href="review/tss_coach.html">Tri and Succeed Sports Coaches</a></li>
+                    <li><a href="tutorial/tss_home.html">Tri and Succeed Sports</a></li>
+                    <li><a href="tutorial/pc_home.html">Pandaisia Chocolates</a></li>
+                    <li><a href="Case 1/sp_home.html">Pencil Tutoring</a></li>
+                    <li><a href="Case 3/ss_dday.html">Normandy Invasion: Day 1</a></li>
+                </ul>
+            </section>
 
-    <!-- Aside Section-->
-    <aside>
-        <h3>Useful Links</h3>
-        <ul>
-            <li><a href="https://github.com/zrodri2338" target="_blank">My GitHub</a></li>
-        </ul>
-    </aside>
+            <!-- Useful Links Section -->
+            <aside class="section-box" id="useful-links">
+                <h3>Useful Links</h3>
+                <ul>
+                    <li><a href="https://github.com/zrodri2338" target="_blank">My GitHub</a></li>
+                </ul>
+            </aside>
 
+            <!-- About Page Section -->
+            <section class="section-box" id="about">
+                <h2>About This Page</h2>
+                <p>This page is part of my CSC230-Web Design class</p>
+            </section>
 
-    <section>
-        <article>
-            <h2>About This Page</h2>
-            <p>This page is part of my CSC230-Web Design class</p>
-            </article>
-    </section>
+        </div> <!-- End of Main Content Grid -->
 
-    <!-- Footer Section-->
-    <footer>
-    </footer>
-
+        <!-- Footer Section -->
+        <footer>
+            <p>© 2024 Zulisa Rodriguez. All Rights Reserved.</p>
+        </footer>
+    </div> <!-- End of Container -->
 </body>
 </html>
