--- a/assn08/tutorial/tb_komatsu.html
+++ b/assn08/tutorial/tb_komatsu.html
@@ -14,7 +14,11 @@
    -->
    
    <meta charset="utf-8" />
-   <title>Tree and Book: The Komatsu Family</title>      
+   <title>Tree and Book: The Komatsu Family</title>  
+   <link href="tb_reset.css" rel="stylesheet" />
+   <link href="tb_styles1.css" rel="stylesheet" />
+   <link href="tb_visual1.css" rel="stylesheet" />
+    
 
 </head>
 
