--- a/assn08/tutorial/tb_komatsu.html
+++ b/assn08/tutorial/tb_komatsu.html
@@ -43,7 +43,13 @@
  
    <article>
       <header>
-         <h1>The Komatsu Family</h1>		 
+         <h1>The Komatsu Family</h1>
+         <figure>
+            <img src="tb_komatsu.png" alt="family portrait"	/>
+            <figcaption>(L-R): Ikko, Mika, Hiroji,
+               Genta, Suzuko
+            </figcaption>	 
+         </figure>
       </header>
       
       <section id="leftColumn">
