--- a/assn08/tutorial/tb_genta.html
+++ b/assn08/tutorial/tb_genta.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Photo Page of Genta Komatsu
-    Author: 
-    Date:   
+    Author: Zulisa Rodriguez
+    Date:   11/17/2024
 
     Filename: tb_genta.html
    -->
