--- a/assn08/tutorial/tb_genta.html
+++ b/assn08/tutorial/tb_genta.html
@@ -13,7 +13,10 @@
     Filename: tb_genta.html
    -->
    <meta charset="utf-8" />
-   <title>Tree and Book: Genta Komatsu</title>         
+   <title>Tree and Book: Genta Komatsu</title> 
+   <link href="tb_reset.css" rel="stylesheet" />
+   <link href="tb_styles2.css" rel="stylesheet" />
+   <link href="tb_visual2.css" rel="stylesheet" />        
 
 </head>
 
