--- a/assn08/tutorial/tb_komatsu.html
+++ b/assn08/tutorial/tb_komatsu.html
@@ -45,7 +45,7 @@
       <header>
          <h1>The Komatsu Family</h1>
          <figure>
-            <img src="tb_komatsu.png" alt="family portrait"	/>
+            <img src="tb_komatsu.png" alt="family portrait" usemap="#family_map"	/>
             <figcaption>(L-R): Ikko, Mika, Hiroji,
                Genta, Suzuko
             </figcaption>	 
