added new projects

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -44,6 +44,7 @@
                     <li><a href="tutorial copy 2/pc_home.html">Pandaisia Chocolates</a></li>
                     <li><a href="case1/sp_home.html">Pencil Tutoring</a></li>
                     <li><a href="case3/ss_dday.html">Normandy Invasion: Day 1</a></li>
+                    <li><a href="tutorial copy 3/tb_komatsu.html">Tree and Book: The Komatsu Family</a></li>
                 </ul>
             </section>
 
