added new project

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -45,6 +45,7 @@
                     <li><a href="case1/sp_home.html">Pencil Tutoring</a></li>
                     <li><a href="case3/ss_dday.html">Normandy Invasion: Day 1</a></li>
                     <li><a href="tutorial copy 3/tb_komatsu.html">Tree and Book: The Komatsu Family</a></li>
+                    <li><a href="case2/sf_torte.html">Save your Fork: Apple Bavarian Torte</a></li>
                 </ul>
             </section>
 
