--- a/assn09/tutorial/tf_prek.html
+++ b/assn09/tutorial/tf_prek.html
@@ -7,8 +7,8 @@
    Tutorial Case
    
    Pre-K Classes offered by Trusted Friends
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/29/2024
    
    Filename: tf_prek.html
    -->
