--- a/assn09/tutorial/tf_prek.html
+++ b/assn09/tutorial/tf_prek.html
@@ -15,8 +15,12 @@
    
    <title>Pre-K Classes at Trusted Friends</title>
    <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />  
+   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+   <link href="tf_reset.css" rel="stylesheet" />
+   <link href="tf_styles2.css" rel="stylesheet" />
+   <link href="tf_flex.css" rel="stylesheet" />
 </head>
+
 
 <body>
    <header>
