--- a/assn09/tutorial/tf_prek.html
+++ b/assn09/tutorial/tf_prek.html
@@ -19,6 +19,7 @@
    <link href="tf_reset.css" rel="stylesheet" />
    <link href="tf_styles2.css" rel="stylesheet" />
    <link href="tf_flex.css" rel="stylesheet" />
+   <link href="tf_navicon.css" rel="stylesheet" />
 </head>
 
 
