--- a/assn09/tutorial/tf_articles.html
+++ b/assn09/tutorial/tf_articles.html
@@ -7,8 +7,8 @@
    Tutorial Case
    
    Trusted Friends Articles of Interest
-   Author: 
-   Date:   
+   Author: Zulisa Rodriguez
+   Date:   11/29/2024
    
    Filename: tf_articles.html
    -->
