--- a/assn09/tutorial/tf_articles.html
+++ b/assn09/tutorial/tf_articles.html
@@ -16,7 +16,7 @@
    <title>Trusted Friends: Articles of Interest</title>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link href="tf_reset.css" rel="stylesheet" />
+   <link href="tf_reset.css" rel="stylesheet" media="all"/>
    <link href="tf_styles3.css" rel="stylesheet" />
 </head>
 
