--- a/assn09/tutorial/tf_articles.html
+++ b/assn09/tutorial/tf_articles.html
@@ -17,7 +17,7 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <link href="tf_reset.css" rel="stylesheet" media="all"/>
-   <link href="tf_styles3.css" rel="stylesheet" />
+   <link href="tf_styles3.css" rel="stylesheet" media="screen" />
 </head>
 
 <body>
