--- a/assn09/tutorial/tf_articles.html
+++ b/assn09/tutorial/tf_articles.html
@@ -18,6 +18,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <link href="tf_reset.css" rel="stylesheet" media="all"/>
    <link href="tf_styles3.css" rel="stylesheet" media="screen" />
+   <link href="tf_print.css" rel="stylesheet" media="print" />
 </head>
 
 <body>
