--- a/assn09/case1/gp_cover.html
+++ b/assn09/case1/gp_cover.html
@@ -7,8 +7,8 @@
           Case Problem 1
           
           Ghost of the Deep Cover Page
-          Author: 
-          Date:   
+          Author: Zulisa Rodriguez
+          Date:   11/29/2024
       
           Filename: gp_cover.html
          -->
