--- a/assn09/case1/gp_page1.html
+++ b/assn09/case1/gp_page1.html
@@ -7,8 +7,8 @@
           Case Problem 1
           
           Ghost of the Deep Page 1
-          Author: 
-          Date:   
+          Author: Zulisa Rodriguez
+          Date:   11/29/2024
       
           Filename: gp_page1.html
          -->
