--- a/assn09/case1/gp_cover.html
+++ b/assn09/case1/gp_cover.html
@@ -15,6 +15,8 @@
    
    <title>Ghost of the Deep Cover Page</title>
    <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
    
 </head>
 
