--- a/assn09/case1/gp_cover.html
+++ b/assn09/case1/gp_cover.html
@@ -16,6 +16,9 @@
    <title>Ghost of the Deep Cover Page</title>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="gp_reset.css" rel="stylesheet" />
+   <link href="gp_layout.css" rel="stylesheet" />
+   <link href="gp_print.css" rel="stylesheet" />
 
    
 </head>
