--- a/assn09/case1/gp_page2.html
+++ b/assn09/case1/gp_page2.html
@@ -15,6 +15,10 @@
    
    <title>Ghost of the Deep Page 2</title>
    <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="gp_reset.css" rel="stylesheet" />
+   <link href="gp_layout.css" rel="stylesheet" />
+   <link href="gp_print.css" rel="stylesheet" />
    </head>
 
 <body>
