--- a/assn09/case1/gp_cover.html
+++ b/assn09/case1/gp_cover.html
@@ -18,7 +18,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="gp_reset.css" rel="stylesheet" />
    <link href="gp_layout.css" rel="stylesheet" />
-   <link href="gp_print.css" rel="stylesheet" />
+   <link href="gp_print.css" rel="stylesheet" media="print"/>
 
    
 </head>
