--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -49,6 +49,14 @@
             You can <a href="#">Listen Live</a> to streaming audio 
             of our broadcast. Please refer below for our current 
             nightly schedule.</p>
+            <table class="schedule">
+               <tr>
+               </tr>
+               <tr>
+               </tr>
+               <tr>
+               </tr>
+            </table>
          
       </section>
       
