--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -51,6 +51,14 @@
             nightly schedule.</p>
             <table class="schedule">
                <tr>
+                  <th>Time</th>
+                  <th>Mon</th>
+                  <th>Tue</th>
+                  <th>Wed</th>
+                  <th>Thu</th>
+                  <th>Fri</th>
+                  <th>Sat</th>
+                  <th>Sun</th>
                </tr>
                <tr>
                </tr>
