--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -62,6 +62,13 @@
                </tr>
                <tr>
                   <th>6:00 PM</th>
+                  <td>National News</td>
+                  <td>National News</td>
+                  <td>National News</td>
+                  <td>National News</td>
+                  <td>National News</td>
+                  <td>National News</td>
+                  <td>National News</td>
                </tr>
                <tr>
                   <th>6:30 PM</th>
