--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -72,6 +72,13 @@
                </tr>
                <tr>
                   <th>6:30 PM</th>
+                  <td>World News</td>
+                  <td>World News</td>
+                  <td>World News</td>
+                  <td>World News</td>
+                  <td>World News</td>
+                  <td>World News</td>
+                  <td>World News</td>
                </tr>
             </table>
          
