--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -19,6 +19,7 @@
    <title>DLR Nightly Schedule</title>
    <link href="dlr_reset.css" rel="stylesheet" />
    <link href="dlr_styles.css" rel="stylesheet" />     
+   <link href="dlr_tables.css" rel="stylesheet" />
 </head>
 
 <body>
