--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -63,23 +63,11 @@
                </tr>
                <tr>
                   <th>6:00 PM</th>
-                  <td>National News</td>
-                  <td>National News</td>
-                  <td>National News</td>
-                  <td>National News</td>
-                  <td>National News</td>
-                  <td>National News</td>
-                  <td>National News</td>
+                  <td> colspan="7">National News</td>
                </tr>
                <tr>
                   <th>6:30 PM</th>
-                  <td>World News</td>
-                  <td>World News</td>
-                  <td>World News</td>
-                  <td>World News</td>
-                  <td>World News</td>
-                  <td>World News</td>
-                  <td>World News</td>
+                  <td> colspan="7">World News</td>
                </tr>
             </table>
          
