--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -69,6 +69,16 @@
                   <th>6:30 PM</th>
                   <td colspan="7">World News</td>
                </tr>
+               <tr>
+                  <th>7:00 PM</th>
+                  <td rowspan="2">Opera Fest</td>
+                  <td rowspan="2">Radio U</td>
+                  <td rowspan="2">Science Week</td>
+                  <td rowspan="2">The Living World</td>
+                  <td>Word Play</td>
+                  <td>Agri-week</td>
+                  <td rowspan="2">Folk Fest</td>
+               </tr>
             </table>
          
       </section>
