--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -79,6 +79,11 @@
                   <td>Agri-week</td>
                   <td rowspan="2">Folk Fest</td>
                </tr>
+               <tr>
+                  <th>7:30 PM</th>
+                  <td>Brain Stew</td>
+                  <td>Bismarck Forum</td>
+               </tr>
             </table>
          
       </section>
