--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -84,6 +84,13 @@
                   <td>Brain Stew</td>
                   <td>Bismarck Forum</td>
                </tr>
+               <tr>
+                  <th>8:00 PM</th>
+                  <td rowspan="4" colspan="4">The Classical Music Connection</td>
+                  <td>Old Time Radio</td>
+                  <td rowspan="4">Saturday Nite Jazz</td>
+                  <td rowspan="4">The Indie Connection</td>
+               </tr>
             </table>
          
       </section>
