--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -91,6 +91,10 @@
                   <td rowspan="4">Saturday Nite Jazz</td>
                   <td rowspan="4">The Indie Connection</td>
                </tr>
+               <tr>
+                  <th>8:30 PM</th>
+                  <td>The Inner Mind</td>
+               </tr>
             </table>
          
       </section>
