--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -95,6 +95,10 @@
                   <th>8:30 PM</th>
                   <td>The Inner Mind</td>
                </tr>
+               <tr>
+                  <th>9:00 PM</th>
+                  <td rowspan="2">Open Mike Nite</td>
+               </tr>
             </table>
          
       </section>
