--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -102,6 +102,10 @@
                <tr>
                   <th>9:30 PM</th>
                </tr>
+               <tr>
+                  <th>10:00 PM</th>
+                  <td colspan="7">World News Feed</td>
+               </tr>
             </table>
          
       </section>
