--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -52,6 +52,7 @@
             nightly schedule.</p>
             <table class="schedule">
                <caption>All Times Central</caption>
+               <thead>
                <tr>
                   <th>Time</th>
                   <th>Mon</th>
@@ -62,6 +63,7 @@
                   <th>Sat</th>
                   <th>Sun</th>
                </tr>
+               </thead>
                <tr>
                   <th>6:00 PM</th>
                   <td colspan="7">National News</td>
