--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -53,6 +53,7 @@
             <table class="schedule">
                <caption>All Times Central</caption>
                <thead>
+                  
                <tr>
                   <th>Time</th>
                   <th>Mon</th>
@@ -64,6 +65,7 @@
                   <th>Sun</th>
                </tr>
                </thead>
+               <tbody>
                <tr>
                   <th>6:00 PM</th>
                   <td colspan="7">National News</td>
@@ -109,6 +111,7 @@
                   <th>10:00 PM</th>
                   <td colspan="7">World News Feed</td>
                </tr>
+               </tbody>
             </table>
          
       </section>
