--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -112,6 +112,11 @@
                   <td colspan="7">World News Feed</td>
                </tr>
                </tbody>
+               <tfoot>
+                  <tr>
+                     <td colspan="8">DLR ends its broadcast day at 10:30 p.m.</td>
+                  </tr>
+               </tfoot>
             </table>
          
       </section>
