--- a/assn09/tutorial copy/dlr_evenings_txt.html
+++ b/assn09/tutorial copy/dlr_evenings_txt.html
@@ -52,6 +52,10 @@
             nightly schedule.</p>
             <table class="schedule">
                <caption>All Times Central</caption>
+               <colgroup>
+                  <col id="firstCol" />
+                  <col class="dayCols" span="7" />
+               </colgroup>
                <thead>
                   
                <tr>
