--- a/assn09/tutorial copy/dlr_lw0414.html
+++ b/assn09/tutorial copy/dlr_lw0414.html
@@ -7,8 +7,8 @@
       Tutorial Case
 
       The Living World: April 14
-      Author: 
-      Date:   
+      Author: Zulisa Rodriguez
+      Date:   11/30/2024
 
       Filename:   dlr_lw0414.html
 
