--- a/assn09/tutorial copy/dlr_lw0414.html
+++ b/assn09/tutorial copy/dlr_lw0414.html
@@ -18,7 +18,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>The Living World: April 14</title>
    <link href="dlr_reset.css" rel="stylesheet" />
-   <link href="dlr_lw.css" rel="stylesheet" />      
+   <link href="dlr_lw.css" rel="stylesheet" />
+   <link href="dlr_columns.css" rel="stylesheet" />      
 </head>
 
 <body>
