--- a/assn10/case1/mi_pricing.html
+++ b/assn10/case1/mi_pricing.html
@@ -18,7 +18,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Marlin Internet</title>
    <link href="mi_reset.css" rel="stylesheet" />
-   <link href="mi_styles.css" rel="stylesheet" />          
+   <link href="mi_styles.css" rel="stylesheet" /> 
+   <link href="mi_tables.css" rel="stylesheet" />         
 </head>
 
 <body>
