--- a/assn10/case1/mi_pricing.html
+++ b/assn10/case1/mi_pricing.html
@@ -48,11 +48,23 @@
          (personal help is <em>always</em> on the line), free security tools, email accounts
          for the whole family, and exclusive online content.</p>
 
-         <table id="pricing"></table>
+         <table id="pricing">
             <colgroup>
                <col id="firstCol">
                <col class="dataCols" span="4">
              </colgroup>
+             <thead>
+               <tr>
+                 <th rowspan="2">Plan</th>
+                 <th colspan="4">Pricing</th>
+               </tr>
+               <tr>
+                 <th>$29.99<br>per month</th>
+                 <th>$39.99<br>per month</th>
+                 <th>$49.99<br>per month</th>
+                 <th>$59.99<br>per month</th>
+               </tr>
+             </thead>
              
             
          </table>
