--- a/assn10/case1/mi_pricing.html
+++ b/assn10/case1/mi_pricing.html
@@ -55,53 +55,63 @@
              </colgroup>
              <thead>
                <tr>
-                 <th rowspan="2">Plan</th>
-                 <th colspan="4">Pricing</th>
+                 <th rowspan="3">select a plan</th>
+                 <th colspan="1">Starter</th>
+                 <th colspan="1">Prime</th>
+                 <th colspan="1">Prime Plus</th>
+                 <th colspan="1">Ultra</th>
                </tr>
                <tr>
-                 <th>$29.99<br>per month</th>
-                 <th>$39.99<br>per month</th>
-                 <th>$49.99<br>per month</th>
-                 <th>$59.99<br>per month</th>
-               </tr>
+                  <th colspan="1">$19.95<br>per month</th>
+                  <th colspan="1">$29.95<br>per month</th>
+                  <th colspan="1">$49.95<br>per month</th>
+                  <th colspan="1">$69.95<br>per month</th>
+                </tr>
              </thead>
              <tbody>
                <tr>
-                 <th>Basic</th>
-                 <td>10 Mbps</td>
-                 <td>20 Mbps</td>
+                 <th>Download Speed</th>
+                 <td>15 Mbps</td>
+                 <td>30 Mbps</td>
                  <td>50 Mbps</td>
                  <td>100 Mbps</td>
                </tr>
                <tr>
-                 <th>Standard</th>
-                 <td>15 Mbps</td>
-                 <td>25 Mbps</td>
-                 <td>55 Mbps</td>
-                 <td>110 Mbps</td>
-               </tr>
-               <tr>
-                 <th>Premium</th>
+                 <th>Upload Speed</th>
+                 <td>3 Mbps</td>
+                 <td>6 Mbps</td>
+                 <td>10 Mbps</td>
                  <td>20 Mbps</td>
-                 <td>30 Mbps</td>
-                 <td>60 Mbps</td>
-                 <td>120 Mbps</td>
                </tr>
                <tr>
-                 <th>Ultra</th>
-                 <td>25 Mbps</td>
-                 <td>35 Mbps</td>
-                 <td>70 Mbps</td>
-                 <td>140 Mbps</td>
+                 <th>Cloud Storage</th>
+                 <td>2 GB</td>
+                 <td>5 GB</td>
+                 <td>15 GB</td>
+                 <td>40 GB</td>
+               </tr>
+               <tr>
+                 <th>E-mail</th>
+                 <td>2 Accounts</td>
+                 <td>3 Accounts</td>
+                 <td>5 Accounts</td>
+                 <td>10 Accounts</td>
+               </tr>
+               <tr>
+                  <th>24/7 Support</th>
+                  <td>Yes</td>
+                  <td>Yes</td>
+                  <td>Yes</td>
+                  <td>Yes</td>
                </tr>
              </tbody>
              <tfoot>
                <tr>
                  <th>Summary</th>
-                 <td>Basic Plan: Affordable for light users</td>
-                 <td>Standard Plan: Best for small families</td>
-                 <td>Premium Plan: Ideal for gamers</td>
-                 <td>Ultra Plan: Maximum speed for heavy users</td>
+                 <td>Just the speed you need to send emails, download map directions, and search the Internet for restaurant reviews.</td>
+                 <td>A great speed at a great price for the familyL kids can play games, adults can pay bills, and everyone can surf at the same time.</td>
+                 <td>Super speeds for multiple tasks that require more broadband capacity; ideal for gamers who need fast response times.</td>
+                 <td>Perfect for a small business running multiple media streams, demanding reduced lag time and fast data delivery.</td>
                </tr>
              </tfoot>
              
