--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -52,7 +52,8 @@
          parties, <em>ever</em>. </p>
       <p>Required values are marked by an asterisk (*)</p>
 
-      <form id="survey">
+      <form id="survey" Action="http://www.example.com/redball/survey" Method="post"
+      >
       </form>
      
    </section>
