--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -54,6 +54,7 @@
 
       <form id="survey" Action="http://www.example.com/redball/survey" Method="post">
          <fieldset id="custInfo">
+            <legend>Customer Information</legend>
          </fieldset>
          
          <fieldset id="expInfo">
