--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -58,6 +58,7 @@
          </fieldset>
          
          <fieldset id="expInfo">
+            <legend>Share Your Experience at Red Ball Pizza</legend>
          </fieldset>
       </form>
      
