--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -55,6 +55,26 @@
       <form id="survey" Action="http://www.example.com/redball/survey" Method="post">
          <fieldset id="custInfo">
             <legend>Customer Information</legend>
+            Name*
+<input name="custName" id="name" type="text" />
+
+Street address
+<input name="custStreet" id="street" type="text" />
+
+City
+<input name="custCity" id="city" type="text" />
+
+State
+<input name="custState" id="state" type="state" />
+
+Postal code
+<inputname="custZip" id="zip" type="text" />
+
+Phone number
+<input name="custPhone" id="phone" type="tel" />
+
+E-mail*
+<input name="custEmail" id="mail" type="email" />
          </fieldset>
          
          <fieldset id="expInfo">
