--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -56,23 +56,25 @@
          <fieldset id="custInfo">
             <legend>Customer Information</legend>
             <label for="name">Name*</label>
-            
             <input name="custName" id="name" type="text" />
+
+            <label for="street">Street Address</label>
             <input name="custStreet" id="street" type="text" />
 
+            <label> for="city">City</label>
             <input name="custCity" id="city" type="text" />
 
-State
-<input name="custState" id="state" type="state" />
+            <label> for="state">State</label>
+            <input name="custState" id="state" type="state" />
 
-Postal code
-<inputname="custZip" id="zip" type="text" />
+            <label> for="zip">Postal <code></code></label>
+            <inputname="custZip" id="zip" type="text" />
 
-Phone number
-<input name="custPhone" id="phone" type="tel" />
+            <label> for="phone">Phone number</label>
+            <input name="custPhone" id="phone" type="tel" />
 
-E-mail*
-<input name="custEmail" id="mail" type="email" />
+            <label> for="mail">E-mail</label>
+            <input name="custEmail" id="mail" type="email" />
          </fieldset>
          
          <fieldset id="expInfo">
