--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -60,25 +60,37 @@
                <label for="name">Name*</label>
                <input name="custName" id="name" type="text" />
             </div>
-            
-            <label for="street">Street Address</label>
-            <input name="custStreet" id="street" type="text" />
 
-            <label for="city">City</label>
-            <input name="custCity" id="city" type="text" />
+            <div class="FormRow">
+               <label for="street">Street Address</label>
+               <input name="custStreet" id="street" type="text" />
+            </div>
 
-            <label for="state">State</label>
-            <input name="custState" id="state" type="state" />
+            <div class="FormRow">
+               <label for="city">City</label>
+               <input name="custCity" id="city" type="text" />
+            </div>
 
-            <label for="zip">Postal <code></code></label>
-            <inputname="custZip" id="zip" type="text" />
+            <div class="FormRow">
+               <label for="state">State</label>
+               <input name="custState" id="state" type="state" />
+            </div>
 
-            <label for="phone">Phone number</label>
-            <input name="custPhone" id="phone" type="tel" />
+            <div class="FormRow">
+               <label for="zip">Postal code</label>
+               <input name="custZip" id="zip" type="text" />
+            </div>
 
-            <label for="mail">E-mail</label>
-            <input name="custEmail" id="mail" type="email" />
-         </fieldset>
+            <div class="FormRow">
+               <label for="phone">Phone number</label>
+               <input name="custPhone" id="phone" type="tel" />
+            </div>
+
+            <div class="FormRow">
+               <label for="mail">E-mail*</label>
+               <input name="custEmail" id="mail" type="email" />
+            </div>
+            </fieldset>
          
          <fieldset id="expInfo">
             <legend>Share Your Experience at Red Ball Pizza</legend>
