--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -56,37 +56,38 @@
       <form id="survey" Action="http://www.example.com/redball/survey" Method="post">
          <fieldset id="custInfo">
             <legend>Customer Information</legend>
-            <div class="formrow">
+
+            <div class="formRow">
                <label for="name">Name*</label>
                <input name="custName" id="name" type="text" />
             </div>
 
-            <div class="FormRow">
+            <div class="formRow">
                <label for="street">Street Address</label>
                <input name="custStreet" id="street" type="text" />
             </div>
 
-            <div class="FormRow">
+            <div class="formRow">
                <label for="city">City</label>
                <input name="custCity" id="city" type="text" />
             </div>
 
-            <div class="FormRow">
+            <div class="formRow">
                <label for="state">State</label>
                <input name="custState" id="state" type="state" />
             </div>
 
-            <div class="FormRow">
+            <div class="formRow">
                <label for="zip">Postal code</label>
                <input name="custZip" id="zip" type="text" />
             </div>
 
-            <div class="FormRow">
+            <div class="formRow">
                <label for="phone">Phone number</label>
                <input name="custPhone" id="phone" type="tel" />
             </div>
 
-            <div class="FormRow">
+            <div class="formRow">
                <label for="mail">E-mail*</label>
                <input name="custEmail" id="mail" type="email" />
             </div>
