--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -69,7 +69,7 @@
 
             <div class="formRow">
                <label for="city">City</label>
-               <input name="custCity" id="city" type="text" />
+               <input name="custCity" id="city" type="text" value="Ormond Beach" />
             </div>
 
             <div class="formRow">
