--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -74,7 +74,7 @@
 
             <div class="formRow">
                <label for="state">State</label>
-               <input name="custState" id="state" type="state" />
+               <input name="custState" id="state" type="state" value="FL" />
             </div>
 
             <div class="formRow">
