--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -59,7 +59,7 @@
 
             <div class="formRow">
                <label for="name">Name*</label>
-               <input name="custName" id="name" type="text" />
+               <input name="custName" id="name" type="text" placeholder="first and last name" />
             </div>
 
             <div class="formRow">
