--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -79,7 +79,7 @@
 
             <div class="formRow">
                <label for="zip">Postal code</label>
-               <input name="custZip" id="zip" type="text" />
+               <input name="custZip" id="zip" type="text" value="nnnnn (-nnnn)" />
             </div>
 
             <div class="formRow">
