--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -79,12 +79,12 @@
 
             <div class="formRow">
                <label for="zip">Postal code</label>
-               <input name="custZip" id="zip" type="text" value="nnnnn (-nnnn)" />
+               <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" />
             </div>
 
             <div class="formRow">
                <label for="phone">Phone number</label>
-               <input name="custPhone" id="phone" type="tel" />
+               <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" />
             </div>
 
             <div class="formRow">
