--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -100,6 +100,16 @@
                <label for="visit">Date of visit</label>
                <input name="visitDate" id="visit" type="date" />
             </div>
+            
+            <div class="formRow">
+               <label for="order">Order type</label>
+               <select name="orderType" id="order">
+                  <option value="order1">Carry out</option>
+                  <option value="order2">Delivery</option>
+                  <option value="order3" selected>Dine in</option>
+                  <option value="order4">Take 'n bake</option>
+               </select>
+            </div>
          </fieldset>
       </form>
      
