--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -91,6 +91,19 @@
                <label for="mail">E-mail*</label>
                <input name="custEmail" id="mail" type="email" />
             </div>
+
+            <div class="formRow">
+               <label for="info">Where did you hear about us?
+               <br />(select all that apply)
+               </label>
+               <select name="infoSrc" id="info" size="5" multiple>
+                  <option value="internet">Internet</option>
+                  <option value="mag">Magazine</option>
+                  <option value="news">Newspaper</option>
+                  <option value="word">Word of Mouth</option>
+                  <option value="other">Other</option>
+               </select>
+            </div>
             </fieldset>
          
          <fieldset id="expInfo">
