--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -123,6 +123,19 @@
                   <option value="order4">Take 'n bake</option>
                </select>
             </div>
+
+            <div class="formRow">
+               <label>Was your service friendly?</label>
+               <fieldset class="optGroup">
+                  <label for="fYes">Yes</label>
+                  <input name="sFriend" id="fYes" value="yes"
+                  type="radio" />
+                        <label for="fNo">No</label>
+                        <input name="sFriend" id="fNo" value="no"
+                  type="radio" />
+            </div>
+               </fieldset>
+            </div>
          </fieldset>
       </form>
      
