--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -134,6 +134,18 @@
                         <input name="sFriend" id="fNo" value="no"
                   type="radio" />
             </div>
+
+            <div class="formRow">
+               <label>Was your order correct?</label>
+               <fieldset class="optGroup">
+                  <label for="cYes">Yes</label>
+                  <input name="oCorrect" id="cYes" value="yes"
+               type="radio" />
+                     <label for="cNo">No</label>
+                     <input name="oCorrect" id="cNo" value="no"
+               type="radio" />
+               </fieldset>
+            </div>
                </fieldset>
             </div>
          </fieldset>
