--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -146,6 +146,18 @@
                type="radio" />
                </fieldset>
             </div>
+
+            <div class="formRow">
+               <label>Was your food hot?</label>
+               <filedset class="optGroup">
+                  <label for="hYes">Yes</label>
+                  <input name="foodHot" id="hYes" value="yes"
+               type="radio" />
+                     <label for="hNO">No</label>
+                     <input name="foodHot" id="hNo" value="no"
+               type="radio" />
+               </filedset>
+            </div>
                </fieldset>
             </div>
          </fieldset>
