--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -149,17 +149,14 @@
 
             <div class="formRow">
                <label>Was your food hot?</label>
-               <filedset class="optGroup">
+               <fieldset class="optGroup">
                   <label for="hYes">Yes</label>
-                  <input name="foodHot" id="hYes" value="yes"
-               type="radio" />
-                     <label for="hNO">No</label>
-                     <input name="foodHot" id="hNo" value="no"
-               type="radio" />
-               </filedset>
-            </div>
+                  <input name="foodHot" id="hYes"  value="yes" type="radio" />
+                  <label for="hNo">No</label>
+                  <input name="foodHot" id="hNo" value="no" type="radio" />
                </fieldset>
             </div>
+ 
          </fieldset>
       </form>
      
