--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -104,6 +104,10 @@
                   <option value="other">Other</option>
                </select>
             </div>
+
+            <input name="mailMe" id="mailCB" value="yes" type="checkbox" />
+            <label for="mailCB">Add me to your mailing list for great coupons and specials!</label>
+            
             </fieldset>
          
          <fieldset id="expInfo">
