--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -160,6 +160,9 @@
                   <input name="foodHot" id="hNo" value="no" type="radio" />
                </fieldset>
             </div>
+
+            <label for="commBox">Tell us more about your experience!</label>
+            <textarea name="custExp" id="commBox"></textarea>
  
          </fieldset>
       </form>
