--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -105,6 +105,11 @@
                </select>
             </div>
 
+            <div class="formRow">
+               <label for="dineSpin">How many times do you dine out per month?</label>
+               <input name="dineOut" id="dineSpin" type="number" value="1" step="1" min="0" max="20" />
+            </div>
+
             <input name="mailMe" id="mailCB" value="yes" type="checkbox" />
             <label for="mailCB">Add me to your mailing list for great coupons and specials!</label>
             
