--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -166,6 +166,13 @@
                </fieldset>
             </div>
 
+            <div class="formRow">
+               <label for="rangeBox">Rate the overall service<br />
+                        (0=poor; 10=great)</label>
+               0
+               <input name="serviceRate" id="rangeBox" type="range" value="5" step="1" min="0" max="10" />
+               10
+            </div>
             <label for="commBox">Tell us more about your experience!</label>
             <textarea name="custExp" id="commBox"></textarea>
  
