--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -106,6 +106,19 @@
             </div>
 
             <div class="formRow">
+               <label for="dish">What's your favorite dish?</label>
+               <input name="faveDish" id="dish" type="text" list="dishType" />
+                  <datalist id="dishType">
+                     <option value="Anitpasto Pizza">
+                     <option value="Big Kahuna Pizza">
+                     <option value="BBQ Chicken Pizza">
+                     <option value="Mediterranean Herb Pizza">
+                     <option value="Pasta Rolls">
+                     <option value="Pasto Artichoke Pizza">
+                  </datalist>
+            </div>
+            
+            <div class="formRow">
                <label for="dineSpin">How many times do you dine out per month?</label>
                <input name="dineOut" id="dineSpin" type="number" value="1" step="1" min="0" max="20" />
             </div>
