--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -190,6 +190,11 @@
             <textarea name="custExp" id="commBox"></textarea>
  
          </fieldset>
+
+         <div id="buttons">
+            <input type="submit" value="Submit My Survey" />
+            <input type="reset" value="Cancel" />
+         </div>
       </form>
      
    </section>
