--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -59,7 +59,7 @@
 
             <div class="formRow">
                <label for="name">Name*</label>
-               <input name="custName" id="name" type="text" placeholder="first and last name" />
+               <input name="custName" id="name" type="text" placeholder="first and last name" required />
             </div>
 
             <div class="formRow">
@@ -89,7 +89,7 @@
 
             <div class="formRow">
                <label for="mail">E-mail*</label>
-               <input name="custEmail" id="mail" type="email" />
+               <input name="custEmail" id="mail" type="email" required />
             </div>
 
             <div class="formRow">
