--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -84,7 +84,8 @@
 
             <div class="formRow">
                <label for="phone">Phone number</label>
-               <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" />
+               <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" 
+                     pattern="^\d{5}(-\d{4}?$)"/>
             </div>
 
             <div class="formRow">
