--- a/assn10/tutorial/rb_survey.html
+++ b/assn10/tutorial/rb_survey.html
@@ -79,13 +79,14 @@
 
             <div class="formRow">
                <label for="zip">Postal code</label>
-               <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" />
+               <input name="custZip" id="zip" type="text" placeholder="nnnnn (-nnnn)" 
+                        pattern="^\d{5}(-\d{4}?$)"/>
             </div>
 
             <div class="formRow">
                <label for="phone">Phone number</label>
                <input name="custPhone" id="phone" type="tel" placeholder="(nnn) nnn-nnnn" 
-                     pattern="^\d{5}(-\d{4}?$)"/>
+                     pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$" />
             </div>
 
             <div class="formRow">
