--- a/finalExam/finalExam.html/finalExam.html
+++ b/finalExam/finalExam.html/finalExam.html
@@ -56,7 +56,12 @@ Description: Final project showcasing a professional design with HTML5 and CSS
                     <li><a href="case3/ss_dday.html">Normandy Invasion: Day 1</a></li>
                     <li><a href="tutorial copy 3/tb_komatsu.html">Tree and Book: The Komatsu Family</a></li>
                     <li><a href="case2/sf_torte.html">Save your Fork: Apple Bavarian Torte</a></li>
-                    
+                    <li><a href="case1 copy 2/ph_plays.html">Philip Henslowe Classic Theatre</a></li>
+                    <li><a href="case1 copy 3/gp_cover.html">Ghost of the Deep Cover Page</a>"</li>
+                    <li><a href="case1 copy 4/mi_pricing.html">Marlin Internet</a></li>
+                    <li><a href="tutorial copy 4/tf_home.html">Trusted Friends Daycare</a></li>
+                    <li><a href="tutorial copy 5/dlr_evenings_txt.html">DLR Nightly Schedule</a></li>
+                    <li><a href="tutorial copy 6/rb_survey.html">Red Ball Pizza</a></li>
                 </ul>
             </section>
 
